removed some of the deprecated methods